# ocrbyme

./: .env.example  .gitignore  QUICKSTART.md  README.md  create_demo_pdf.py  create_enriched_test_pdf.py  create_test_pdf.py  pyproject.toml  run_ocr.bat  test_mcp_manual.py  快速开始.md  批处理使用说明.md
.claude/: settings.local.json
src/ocrbyme/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py
src/ocrbyme/core/: __init__.py  image_manager.py  image_preprocessor.py  markdown_generator.py  ocr_client.py  pdf_image_extractor.py  pdf_processor.py  prompt_templates.py
src/ocrbyme/models/: __init__.py  types.py
src/ocrbyme/utils/: __init__.py  retry.py
tests/: conftest.py  test_config.py  test_config_enhanced.py  test_image_preprocessor.py  test_mcp_integration.py  test_mcp_server.py  test_prompt_templates.py  test_retry.py
tests/fixtures/: README.md
